2011-04-15  Shishir Agrawal  <shishir@chromium.org>

        Reviewed by James Robinson.

        Add a flag to guard Page Visibility API changes.
        https://bugs.webkit.org/show_bug.cgi?id=58464

        * features.gypi:

2011-04-15  Charlie Reis  <creis@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] fast/events/popup-allowed-from-gesture-initiated-form-submit.html causing debug ASSERT
        https://bugs.webkit.org/show_bug.cgi?id=44079

        Remove an assert whose invariant doesn't hold.

        * src/FrameLoaderClientImpl.cpp:

2011-04-15  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by David Levin.

        Expose unified Quota API if QUOTA build flag is enabled
        https://bugs.webkit.org/show_bug.cgi?id=58648

        * src/AssertMatchingEnums.cpp: Added enum assertions.
        * src/StorageInfoChromium.cpp: Made a build fix.

2011-04-15  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Rename rawRequestHeadersText and RawResponseHeadersText to requestHeadersText and responseHeadersText
        https://bugs.webkit.org/show_bug.cgi?id=58650

        * public/WebHTTPLoadInfo.h:
        * src/WebHTTPLoadInfo.cpp:
        (WebKit::WebHTTPLoadInfo::requestHeadersText):
        (WebKit::WebHTTPLoadInfo::setRequestHeadersText):
        (WebKit::WebHTTPLoadInfo::responseHeadersText):
        (WebKit::WebHTTPLoadInfo::setResponseHeadersText):

2011-04-15  Zelidrag Hornung  <zelidrag@chromium.org>

        Reviewed by Darin Fisher.

        Added enums for external file system type and exposed factory function
        for creating File- and DirectoryEntry objects from Chromium side.
        https://bugs.webkit.org/show_bug.cgi?id=58456

        * public/WebFileSystem.h:
        * public/WebFrame.h:
        * src/AssertMatchingEnums.cpp:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::createFileSystem):
        (WebKit::WebFrameImpl::createFileEntry):