@@ -1,3 +1,12 @@
+2011-04-15  John Bates  <jbates@google.com>
+
+        Reviewed by Kenneth Russell.
+
+        Change WebGraphicsContext3D virtuals to pure virtuals as intended
+        https://bugs.webkit.org/show_bug.cgi?id=58479
+
+        * public/WebGraphicsContext3D.h:
+
 2011-04-15  Shishir Agrawal  <shishir@chromium.org>
 
         Reviewed by James Robinson.
